--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/DanielCosta.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Costa</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://danielcosta.dev.br/" />
+    <meta property="og:title" content="Daniel Costa" />
+    <meta property="og:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+    <meta property="og:image" content="https://danielcosta.dev.br/public/DanielCostapfp.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://danielcosta.dev.br/" />
+    <meta property="twitter:title" content="Daniel Costa" />
+    <meta property="twitter:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+    <meta property="twitter:image" content="https://danielcosta.dev.br/public/DanielCostapfp.png" />
   </head>
   <body>
     <div id="app"></div>
