--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Costa</title>
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://danielcosta.dev.br/" />
-    <meta property="og:title" content="Daniel Costa" />
-    <meta property="og:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
-    <meta property="og:image" content="https://danielcosta.dev.br/public/DanielCostapfp.png" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://danielcosta.dev.br/" />
+  <meta property="og:title" content="Daniel Costa" />
+  <meta property="og:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+  <meta property="og:site_name" content="Daniel Costa" />
+  <meta property="og:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://danielcosta.dev.br/" />
-    <meta property="twitter:title" content="Daniel Costa" />
-    <meta property="twitter:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
-    <meta property="twitter:image" content="https://danielcosta.dev.br/public/DanielCostapfp.png" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="app"></div>
