fix meta from twitter

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Daniel Costa" />
+<meta name="twitter:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+<meta name="twitter:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
+
   </head>
   <body>
     <div id="app"></div>
