--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Costa</title>
   <meta property="og:title" content="Daniel Costa" />
-  <meta property="og:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+  <meta property="og:description" content="Desenvolvedor apaixonado por tecnologia e programação." />
   <meta property="og:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Daniel Costa" />
-  <meta name="twitter:description" content="Apaixonado por tecnologia, IA e programação, construindo o futuro com código e criatividade." />
+  <meta name="twitter:description" content="Desenvolvedor apaixonado por tecnologia e programação." />
   <meta name="twitter:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
   </head>
   <body>
