change for new design

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/DanielCosta.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Costa</title>
-  <meta property="og:title" content="Daniel Costa" />
-  <meta property="og:description" content="Desenvolvedor apaixonado por tecnologia e programação." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta property="og:title" content="Daniel Costa | Desenvolvedor & Analista de Sistemas" />
+  <meta property="og:description" content="Especialista em Análise de Sistemas, BI e infraestrutura. Apaixonado por tecnologia, automação e inovação." />
   <meta property="og:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
+  <meta property="og:url" content="https://danielcosta.dev.br" />
+  <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Daniel Costa" />
-  <meta name="twitter:description" content="Desenvolvedor apaixonado por tecnologia e programação." />
+  <meta name="twitter:title" content="Daniel Costa | Desenvolvedor" />
+  <meta name="twitter:description" content="Especialista em Análise de Sistemas, BI e infraestrutura. Apaixonado por tecnologia, automação e inovação." />
   <meta name="twitter:image" content="https://danielcosta.dev.br/DanielCostapfp.png" />
   </head>
   <body>
